# Mythical_rare

./: .gitignore  MONGOLIA_PROSPECTION_BLUEPRINT.md  PHASE3_STAC_INGEST_GUIDE.md  PHASE4_IMPLEMENTATION_GUIDE.md  README(1).md  README.md  pyproject.toml  ranked_output.json  sample_input.json
config/: default.toml  stac_recipe.planetary_computer.landsat.toml  stac_recipe.template.toml
examples/: mongolia_steppe_aoi.example.geojson  red_zone_input.example.geojson
run_open_data/analysis_outputs/: analysis_summary.json  review_map.html
run_open_data/data_pack/: dem.tif  pack_manifest.json  quality.tif  selection_manifest.json
run_open_data/data_pack/optical/: 2024-05-16_LC09_L2SP_141028_20240516_02_T1.tif  2024-07-18_LC08_L2SP_142027_20240718_02_T1.tif  2024-08-27_LC09_L2SP_142027_20240827_02_T1.tif  2024-09-04_LC08_L2SP_142027_20240904_02_T1.tif  2024-09-05_LC09_L2SP_141028_20240905_02_T1.tif  2024-09-13_LC08_L2SP_141028_20240913_02_T1.tif
src/steppe_prospector/: __init__.py  analysis.py  aoi.py  cli.py  clustering.py  config.py  context_layers.py  datapack.py  demo.py  features.py  guardrails.py  ingest.py  io.py  models.py  outputs.py  pipeline.py  raster_features.py  redzone_import.py  scoring.py  stac.py  stac_recipe.py
tests/: test_analysis_demo.py  test_phase4_context.py  test_phase4_redzones.py  test_pipeline.py  test_stac_ingest.py
