[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongolia-prospection-mvp"
version = "0.4.0"
description = "Safe-by-design archaeological prospection toolkit for Mongolia"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = [
  "folium>=0.16",
  "numpy>=1.24",
  "pyproj>=3.5",
  "rasterio>=1.3",
  "requests>=2.31",
  "scikit-image>=0.22",
  "scipy>=1.11",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
